# Packaging metadata so that python can undrestand the project is a package. 

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aiops-hdfs"
version = "0.1.0"
description = "HDFS log anomaly detection featuring safe incident-response simulation"
requires-python = ">=3.11"
dependencies = []

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
